# green-mail

./: manage.py  pyproject.toml
core/: views.py
green_mail_proj/: asgi.py  db.sqlite3  settings.py  urls.py
green_mail_proj/core/: models.py  views.py
green_mail_proj/core/migrations/: 0001_initial.py  0002_account_smtp_port_alter_account_pop3_host_and_more.py
green_mail_proj/green_mail_proj/: settings.py  urls.py  wsgi.py
green_mail_proj/static/css/: errorstyle.css  formstyle.css  loginform.css  messagestyle.css  style.css
green_mail_proj/templates/: authentication.html  compose.html  error.html  home.html  message.html
static/css/: darkcolors.css  reset.css  style.css
templates/: add.html  home.html  message.html
